force-app/main/default/objects/PatientToOrder__c/PatientToOrder__c.object-meta.xml
<CustomObject>
    <label>PatientToOrder</label>
    <nameField>
        <label>PatientToOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PatientToOrder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>