force-app/main/default/objects/PatientToOrder__c/fields/Test_Order_1__c.field-meta.xml
<CustomField>
    <fullName>Test_Order_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Order 1</label>
    <referenceTo>TestOrder__c</referenceTo>
    <relationshipLabel>PatientToOrder</relationshipLabel>
    <relationshipName>PatientToOrder</relationshipName>
    <type>Lookup</type>
</CustomField>