force-app/main/default/objects/PatientToOrder__c/fields/Test_Order_2__c.field-meta.xml
<CustomField>
    <fullName>Test_Order_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Order 2</label>
    <referenceTo>TestOrder__c</referenceTo>
    <relationshipLabel>PatientToOrder (Test Order 2)</relationshipLabel>
    <relationshipName>PatientToOrder1</relationshipName>
    <type>Lookup</type>
</CustomField>