force-app/main/default/objects/PatientToOrder__c/fields/Test_Order_3__c.field-meta.xml
<CustomField>
    <fullName>Test_Order_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Order 3</label>
    <referenceTo>TestOrder__c</referenceTo>
    <relationshipLabel>PatientToOrder (Test Order 3)</relationshipLabel>
    <relationshipName>PatientToOrder2</relationshipName>
    <type>Lookup</type>
</CustomField>